# geo-darshan

./: .gitignore  .prettierignore  .prettierrc  CLAUDE.md  README.md  config.yaml  eslint.config.js  package-lock.json  package.json  plan.md  pyproject.toml  svelte.config.js  tsconfig.json  vite.config.js
.llm-context/rules/: exc-repo.md  flt-app-only.md  flt-cluster-viewer.md  flt-detection-only.md  flt-repo.md  flt-scripts-only.md  prm-code.md  prm-custom.md  prm-detection.md  prm-no-frontend.md  prm-rule-create.md  prm-scripts.md
app/: AppContext.svelte  DetectionContext.svelte  detection.html  hierarchy-colors.json  index.html  land-cover-viewer.html  land-use.json  stores.js  vite.config.js
app/components/: AnimationControls.svelte  ClusterLegend.svelte  ControlsPanel.svelte  DataSection.svelte  HierarchyLegend.svelte  HierarchySelector.svelte  InteractionModeControls.svelte  LabeledCompositeController.svelte  LandUseDropdown.svelte  LandUseLegend.svelte  LegendPanel.svelte  MapInfoPanel.svelte  NavigationControls.svelte  OverlayControls.svelte  TreeNode.svelte
app/controllers/: ClassificationController.svelte  CompositeController.svelte  DataController.svelte  InteractiveController.svelte  (+6 more)
cluster-viewer/: index.html  land-use.json
notebooks/: aef-cluser-analysis.md  labeling.md
scripts/: download_esri.js  ee_download.js  gen_cluster_animation.py  gen_cluster_hierarchy.py  gen_hierarchy_from_shapefile.js  precompute_shapefile_intersections.py  stitch_aef.js  stitch_esri.js  stitch_esri.py  vlm_label_prototype.py
src-tauri/: Cargo.toml  tauri.conf.json
(+73 files in other folders)
