[project]
name = "geo-darshan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.1",
    "ipyleaflet>=0.20.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "jupytext>=1.17.2",
    "localtileserver>=0.10.6",
    "matplotlib>=3.10.5",
    "rasterio>=1.4.3",
    "setuptools<81",
    "shapely>=2.1.1",
]
